# domaintools

./: .pre-commit-config.yaml  LICENSE.txt  README.rst  pyproject.toml  setup.cfg
sphinxcontrib/domaintools/: _version.py
src/sphinxcontrib/domaintools/: __init__.py
