[metadata]
name = sphinxcontrib-domaintools
version = attr: sphinxcontrib.domaintools._version.__version__
author = Kay-Uwe (Kiwi) Lorenz
author_email = kiwi@franka.dyndns.org
maintainer = Kaleb Barrett
maintainer_email = dev.ktbarrett@gmail.com
description = Sphinx extension for easy domain creation.
long_description = file: README.rst
license = BSD-3-Clause
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Documentation
    Topic :: Utilities
project_urls =
    Repository = https://github.com/ktbarrett/domaintools.git
    Bug Reports = https://github.com/ktbarrett/domaintools/issues

[options]
python_requires = >=3.8
packages = find:
install_requires =
    sphinx>=1.0
